--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,10 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_secure_storage: ^9.0.0
   fluttertoast: ^8.2.4
-  image_picker: ^1.0.3
+  image_picker: ^1.0.7
   device_preview: ^1.1.0
   flutter_svg: ^2.0.10+1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
